[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rektaudit-sdk"
version = "0.1.2"
description = "Official Python SDK for RektAudit signed event ingestion"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "PyNaCl>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/rektaudit/rektaudit-sdk"
Repository = "https://github.com/rektaudit/rektaudit-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["rektaudit*"]